<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/card_layout_theme"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/card_view_corner_radius"
    app:cardElevation="4dp"
    >

    <LinearLayout
        style="@style/main_layout_theme"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layoutMainInfo">


            <LinearLayout
                android:id="@+id/layoutTemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/tvTemperature"
                    style="@style/TemperatureTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tvTemperatureHighLow"
                    style="@style/SmallTextTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <TextView
                android:id="@+id/tvDescription"
                style="@style/MediumTextTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="false"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_toRightOf="@id/layoutTemperature"
                android:gravity="left|center_vertical"
                android:maxLines="2"/>


            <LinearLayout
                android:id="@+id/layoutTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="false"
                android:layout_centerHorizontal="false"
                android:layout_centerVertical="true"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/tvTime"
                    style="@style/MediumTextTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tvLabelGeneratedTime"
                    style="@style/XSmallTextTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/generated"/>

                <TextView
                    android:id="@+id/tvGeneratedTime"
                    style="@style/XSmallTextTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"/>

            </LinearLayout>


            <ImageView
                android:id="@+id/ivIcon"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_toLeftOf="@id/layoutTemperature"
                android:layout_toRightOf="@id/layoutTime"
                android:contentDescription="@string/icon"
                android:scaleType="fitCenter"
                />
            <!--android:src="@drawable/ic_star_black_36dp"-->

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/layoutDetails"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/layoutWind"
                android:gravity="center_vertical|center_horizontal"
                android:layout_weight="1">

                <TextView
                    android:text="@string/wind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2"
                    android:layout_gravity="center_vertical"
                    android:gravity="right|center_vertical"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvWindSpeed"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvWindDirection"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center_horizontal"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:text="@string/cloudiness"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvLabelCloudiness"
                        android:layout_weight="1"
                        android:layout_gravity="right"
                        android:paddingLeft="4dp"
                        android:paddingRight="4dp"/>

                    <TextView
                        android:text="@string/humidy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvLabelHumidy"
                        android:layout_weight="1"
                        android:layout_gravity="right"
                        android:paddingRight="4dp"
                        android:paddingLeft="4dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvCloudiness"
                        android:layout_weight="1"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvHumidity"
                        android:layout_weight="1"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>